# projeto_oficina

./: .gitignore  .mise.toml  Dockerfile  alembic.ini  compose.yaml  entrypoint.sh  meubanco.db  pyproject.toml
alembic/: env.py
alembic/versions/: 446428fa4fd4_add_username.py  6bc316960262_create_user_and_file_tables.py  8be53a90093a_criando_banco.py
src/: app.py  database.py  models.py  schemas.py  security.py  services.py  settings.py
src/router/: annotated.py  auth.py  item.py  user.py
tests/: test_app.py  test_register.py
